# snake-social

./: README.md  openapi.yaml  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
backend/: pyproject.toml
backend/app/: db.py  deps.py  main.py  models.py
backend/app/routes/: auth.py  game.py  leaderboard.py  spectate.py
backend/tests/: test_api.py
frontend/: .gitignore  README.md  TESTING.md  package-lock.json  package.json
frontend/src/: index.css
frontend/src/__tests__/: gameLogic.test.ts  setup.ts
frontend/src/components/auth/: AuthForm.tsx
frontend/src/components/game/: GameBoard.tsx  GameOverlay.tsx  ModeSelector.tsx  ScoreDisplay.tsx
frontend/src/components/leaderboard/: Leaderboard.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: game.ts
src/: App.tsx
src/__tests__/: api.test.ts  setup.ts
src/components/game/: GameControls.tsx  SnakeGame.tsx
src/components/layout/: Header.tsx  Layout.tsx
src/components/spectate/: SpectatorMode.tsx
src/components/ui/: input.tsx
src/hooks/: useGameLogic.ts
src/pages/: AuthPage.tsx  LeaderboardPage.tsx  NotFound.tsx  SpectatePage.tsx
src/services/: api.ts
